@@ -1229,6 +1229,7 @@
 
     <team id="uz">
         <_language code="uz">Uzbek</_language>
+        <_language code="uz@Latn">Uzbek (Latin)</_language>
 
         <coordinator>
             <name>Mashrab Kuvatov</name>
