@@ -1,5 +1,9 @@
 2006-03-08  Danilo Šegan  <danilo@gnome.org>
 
+	* translation-teams.xml.in: Update.
+
+2006-03-08  Danilo Šegan  <danilo@gnome.org>
+
 	* defaults.py (database_connection): switch to MySQL.
 
 	* database.py (ArchivedStatistics, ArchivedInformation): 
